# bruteForce

./: .gitignore  CMakeLists.txt  average_my.c  common.cpp  common.h  main.cpp  main_omp.cpp  main_seq.cpp  readme.md
